Fixed collapse of an active item

--- a/src/assets/layout/styles/layout/_sidebar_vertical.scss
+++ b/src/assets/layout/styles/layout/_sidebar_vertical.scss
@@ -41,6 +41,14 @@
             }
         }
 
+        a {
+            &.active-menuitem {
+                > .layout-submenu-toggler {
+                    transform: rotate(-180deg);
+                }
+            }
+        }
+
         li.active-menuitem {
             > a {
                 .layout-submenu-toggler {
